--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Qing Wang | Academic Homepage</title>
+  <title>Qing Wang | Systems</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -17,9 +18,9 @@
       <p>Email: wq1997 at tsinghua dot edu dot cn</p>
       <p>Address: Haidian District, Beijing, China</p>
       <p>
-        <a href="https://scholar.google.com.hk/citations?user=H3vNc-EAAAAJ" target="_blank" title="Google Scholar">
+        <a href="https://scholar.google.com.hk/citations?user=H3vNc-EAAAAJ" target="_blank" title="Google Scholar" class="bule-tag">
           Google Scholar</a> |
-        <a href="https://dblp.org/pid/97/6505-31.html" target="_blank" title="DBLP"> DBLP</a>
+        <a href="https://dblp.org/pid/97/6505-31.html" target="_blank" title="DBLP" class="bule-tag"> DBLP</a>
       </p>
     </div>
   </header>
@@ -35,46 +36,46 @@
     </section>
 
 <section id="research">
-  <h2>Research Interests</h2>
+  <h2>Research</h2>
   <ul>
     <li>
       <strong>Lifting network-level knowledge to storage software</strong>
       <ul>
-        <li>Leveraging NIC hardware ACKs for fast commit <span class="conf-tag">(NSDI'25)</span></li>
+        <li>Leveraging NIC hardware ACKs for fast commit <span class="bule-tag">(NSDI'25)</span></li>
       </ul>
     </li>
 
     <li>
       <strong>Distributed protocols with network supports</strong>
       <ul>
-        <li>In-network cache coherence <span class="conf-tag">(FAST'21)</span></li>
-        <li>RDMA primitives for replication <span class="conf-tag">(OSDI'23)</span></li>
+        <li>In-network cache coherence <span class="bule-tag">(FAST'21)</span></li>
+        <li>RDMA primitives for replication <span class="bule-tag">(OSDI'23)</span></li>
       </ul>
     </li>
 
     <li>
       <strong>Indexes for different network links</strong>
       <ul>
-        <li>NUMA-aware index <span class="conf-tag">(OSDI'21, TOS'22)</span></li>
-        <li>RDMA-based index on disaggregated memory <span class="conf-tag">(SIGMOD'22, EuroSys'25)</span></li>
+        <li>NUMA-aware index <span class="bule-tag">(OSDI'21, TOS'22)</span></li>
+        <li>RDMA-based index on disaggregated memory <span class="bule-tag">(SIGMOD'22, EuroSys'25)</span></li>
       </ul>
     </li>
 
     <li>
       <strong>Memory management</strong>
       <ul>
-        <li>Memory compaction <span class="conf-tag">(USENIX ATC'22)</span></li>
-        <li>Protective remote memory <span class="conf-tag">(FAST'23)</span></li>
-        <li>SSD-extended remote memory <span class="conf-tag">(FAST'24)</span></li>
+        <li>Memory compaction <span class="bule-tag">(USENIX ATC'22)</span></li>
+        <li>Protective remote memory <span class="bule-tag">(FAST'23)</span></li>
+        <li>SSD-extended remote memory <span class="bule-tag">(FAST'24)</span></li>
       </ul>
     </li>
 
     <li>
       <strong>Concurrency</strong>
       <ul>
-        <li>One-sided locks <span class="conf-tag">(FAST'23, FAST'25)</span></li>
-        <li>Request scheduling <span class="conf-tag">(USENIX ATC'22)</span></li>
-        <li>Transactions <span class="conf-tag">(VLDB'22, DAC'20)</span></li>
+        <li>One-sided locks <span class="bule-tag">(FAST'23, FAST'25)</span></li>
+        <li>Request scheduling <span class="bule-tag">(USENIX ATC'22)</span></li>
+        <li>Transactions <span class="bule-tag">(VLDB'22, DAC'20)</span></li>
       </ul>
     </li>
   </ul>
