--- a/index.html
+++ b/index.html
@@ -107,4 +107,7 @@
   <script src="script.js"></script>
 </body>
 
+<a href='https://clustrmaps.com/site/1bf7f'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=70&t=n&d=5d4Hb7bouyA-GKIIr2jc4hjqvXWkMD-2kiiFJrlUkPQ' width='0' /></a>
+
 </html>
+
