--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h2>About Me</h2>
       <p>Currently, I am a post-doc at Tsinghua University.
         I received my PhD degree from Tsinghua University in 2023, and Bachelor degree from Huazhong University of
-        Science and Technology in 2018.
+        Science and Technology (HUST) in 2018.
         I build distributed memory/storage systems with fast and smart hardware.
       </p>
     </section>
