--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       <p>Email: wq1997 at tsinghua dot edu dot cn</p>
       <p>Address: Haidian District, Beijing, China</p>
       <p>
-        <a href="https://scholar.google.com.hk/citations?user=H3vNc-EAAAAJ" target="_blank" title="Google Scholar" class="bule-tag">
+        <a href="https://scholar.google.com.hk/citations?user=H3vNc-EAAAAJ" target="_blank" title="Google Scholar"
+          class="bule-tag">
           Google Scholar</a> |
         <a href="https://dblp.org/pid/97/6505-31.html" target="_blank" title="DBLP" class="bule-tag"> DBLP</a>
       </p>
@@ -31,55 +32,64 @@
       <p>Currently, I am a post-doc at Tsinghua University.
         I received my PhD degree from Tsinghua University in 2023, and Bachelor degree from Huazhong University of
         Science and Technology in 2018.
-        I build distributed memory/storage systems with fast and smart hardware.
       </p>
+
+      <p style="color: darkred; font-weight: bold;">
+        I will be joining Nanjing University as a tenure-track Associate Professor this fall.
+        I'm looking for motivated undergraduate students, research interns, and Master's or PhD students who are passionate about systems research. Feel free to get in touch!
     </section>
 
-<section id="research">
-  <h2>Research</h2>
-  <ul>
-    <li>
-      <strong>Lifting network-level knowledge to storage software</strong>
-      <ul>
-        <li>Leveraging NIC hardware ACKs for fast commit <span class="bule-tag">(NSDI'25)</span></li>
-      </ul>
-    </li>
+    <section id="research">
+      <h2>Research</h2>
 
-    <li>
-      <strong>Distributed protocols with network supports</strong>
-      <ul>
-        <li>In-network cache coherence <span class="bule-tag">(FAST'21)</span></li>
-        <li>RDMA primitives for replication <span class="bule-tag">(OSDI'23)</span></li>
-      </ul>
-    </li>
+      <p>My research focuses on computer systems, particularly <strong>storage/memory systems</strong> and
+        <strong>networked systems</strong>.
+      </p>
+      <p> Below are several recent research projects:</p>
 
-    <li>
-      <strong>Indexes for different network links</strong>
       <ul>
-        <li>NUMA-aware index <span class="bule-tag">(OSDI'21, TOS'22)</span></li>
-        <li>RDMA-based index on disaggregated memory <span class="bule-tag">(SIGMOD'22, EuroSys'25)</span></li>
-      </ul>
-    </li>
+        <li>
+          <strong>Lifting network-level knowledge to storage software</strong>
+          <ul>
+            <li>Leveraging NIC hardware ACKs for fast commit <span class="bule-tag">(NSDI'25)</span></li>
+          </ul>
+        </li>
 
-    <li>
-      <strong>Memory management</strong>
-      <ul>
-        <li>Memory compaction <span class="bule-tag">(USENIX ATC'22)</span></li>
-        <li>Protective remote memory <span class="bule-tag">(FAST'23)</span></li>
-        <li>SSD-extended remote memory <span class="bule-tag">(FAST'24)</span></li>
-      </ul>
-    </li>
+        <li>
+          <strong>Distributed protocols with network supports</strong>
+          <ul>
+            <li>In-network cache coherence <span class="bule-tag">(FAST'21)</span></li>
+            <li>Network primitives for replication <span class="bule-tag">(OSDI'23)</span></li>
+          </ul>
+        </li>
 
-    <li>
-      <strong>Concurrency</strong>
-      <ul>
-        <li>One-sided locks <span class="bule-tag">(FAST'23, FAST'25)</span></li>
-        <li>Request scheduling <span class="bule-tag">(USENIX ATC'22)</span></li>
-        <li>Transactions <span class="bule-tag">(VLDB'22, DAC'20)</span></li>
+        <li>
+          <strong>Indexes for different network links</strong>
+          <ul>
+            <li>NUMA-aware index <span class="bule-tag">(OSDI'21)</span></li>
+            <li>Index on disaggregated memory <span class="bule-tag">(EuroSys'25, SIGMOD'22)</span></li>
+          </ul>
+        </li>
+
+        <li>
+          <strong>Memory management</strong>
+          <ul>
+            <li>SSD-extended remote memory <span class="bule-tag">(FAST'24)</span></li>
+            <li>Protective remote memory <span class="bule-tag">(FAST'23)</span></li>
+            <li>Memory compaction <span class="bule-tag">(USENIX ATC'22)</span></li>
+          </ul>
+        </li>
+
+        <li>
+          <strong>Concurrency</strong>
+          <ul>
+            <li>One-sided locks <span class="bule-tag">(FAST'25, FAST'23)</span></li>
+            <li>Request scheduling <span class="bule-tag">(USENIX ATC'22)</span></li>
+            <li>Transactions <span class="bule-tag">(VLDB'22, DAC'20)</span></li>
+          </ul>
+        </li>
       </ul>
-    </li>
-  </ul>
-</section>
+    </section>
 
 
     <section id="publications">
@@ -107,7 +117,7 @@
   <script src="script.js"></script>
 </body>
 
-<a href='https://clustrmaps.com/site/1bf7f'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=70&t=n&d=5d4Hb7bouyA-GKIIr2jc4hjqvXWkMD-2kiiFJrlUkPQ' width='0' /></a>
+<a href='https://clustrmaps.com/site/1bf7f' title='Visit tracker'><img
+    src='//clustrmaps.com/map_v2.png?cl=ffffff&w=70&t=n&d=5d4Hb7bouyA-GKIIr2jc4hjqvXWkMD-2kiiFJrlUkPQ' width='0' /></a>
 
 </html>
-
