--- a/index.html
+++ b/index.html
@@ -30,12 +30,15 @@
     <section id="about">
       <h2>About Me</h2>
       <p>Currently, I am a post-doc at Tsinghua University.
-        I received my PhD degree from Tsinghua University in 2023, and Bachelor degree from Huazhong University of Science and Technology (HUST) in 2018.
+        I received my PhD degree from Tsinghua University in 2023, and Bachelor degree from Huazhong University of
+        Science and Technology (HUST) in 2018.
       </p>
 
       <p style="color: darkred; font-weight: bold;">
         I will be joining Nanjing University as a tenure-track Associate Professor this fall.
-        I'm looking for motivated undergraduate students, research interns, and Master's or PhD students who are passionate about systems research. Feel free to get in touch!
+      </p>
+      <p><strong style="color:#1f77b4">Prospective students:</strong> If you're passionate about system research and interested in working with me, please feel free to reach out via email.</p>
+
     </section>
 
     <section id="research">
@@ -82,9 +85,8 @@
         <li>
           <strong>Concurrency</strong>
           <ul>
-            <li>One-sided locks <span class="bule-tag">(FAST'25, FAST'23)</span></li>
-            <li>Request scheduling <span class="bule-tag">(USENIX ATC'22)</span></li>
-            <li>Transactions <span class="bule-tag">(VLDB'22, DAC'20)</span></li>
+            <li>Distributed Locks <span class="bule-tag">(FAST'25, FAST'23)</span></li>
+            <li>Transactions <span class="bule-tag">(USENIX ATC'22, VLDB'22, DAC'20)</span></li>
           </ul>
         </li>
       </ul>
