--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section id="about">
       <h2>About Me</h2>
       <p>Currently, I am a post-doc at Tsinghua University.
-        I received my PhD degree from Tsinghua University in 2023, and Bachelor degree from Huazhong University of
+        I received my PhD degree from Tsinghua University in 2023 (Advisor: Prof. Jiwu Shu), and Bachelor degree from Huazhong University of
         Science and Technology (HUST) in 2018.
       </p>
 
@@ -105,8 +105,9 @@
       <ul>
         <li>Distinguished Artifact Award, USENIX FAST 2025</li>
         <li>CACM Research Highlight, 2025</li>
-        <li>2023 ACM SIGMOD Research Highlight Award</li>
+        <li>ACM SIGMOD Research Highlight Award, 2023</li>
         <li>Microsoft Research PhD Fellowship, 2021</li>
+        <li>Huawei OlympusMons Award, 2020</li>
       </ul>
     </section>
   </main>
