--- a/js_index.html
+++ b/js_index.html
@@ -29,14 +29,10 @@
   <main>
     <section id="about">
       <h2>About Me</h2>
-      <p>Currently, I am a post-doc at Tsinghua University.
-        I received my PhD degree from Tsinghua University in 2023 (Advisor: Prof. Jiwu Shu), and Bachelor degree from Huazhong University of
-        Science and Technology (HUST) in 2018.
+      <p>I am an incoming tenure-track Associate Professor at Nanjing University.
+        I received my Ph.D. degree from Tsinghua University in 2023 (Advisor: Prof. Jiwu Shu), and Bachelor's degree from Huazhong University of Science and Technology in 2018. From 2023 to 2025, I worked as a Postdoctoral Researcher at Tsinghua University.
       </p>
 
-      <p style="color: darkred; font-weight: bold;">
-        I will be joining Nanjing University as a tenure-track Associate Professor this fall.
-      </p>
       <p><strong style="color:#1f77b4">Prospective students:</strong> If you're passionate about system research and interested in working with me, please feel free to reach out via email.</p>
 
     </section>
