--- a/js_index.html
+++ b/js_index.html
@@ -14,9 +14,9 @@
     <img src="assets/wq.png" alt="Profile picture" class="avatar-rect">
     <div class="info">
       <h1>Qing Wang</h1>
-      <p>Post-Doc, Department of Computer Science, Tsinghua University</p>
+      <p>Associate Professor</p>
+      <p>School of Computer Science, Nanjing University.</p>
       <p>Email: wq1997 at tsinghua dot edu dot cn</p>
-      <p>Address: Haidian District, Beijing, China</p>
       <p>
         <a href="https://scholar.google.com.hk/citations?user=H3vNc-EAAAAJ" target="_blank" title="Google Scholar"
           class="bule-tag">
@@ -29,7 +29,7 @@
   <main>
     <section id="about">
       <h2>About Me</h2>
-      <p>I am an incoming tenure-track Associate Professor at Nanjing University.
+      <p>I am a tenure-track Associate Professor at Nanjing University.
         I received my Ph.D. degree from Tsinghua University in 2023 (Advisor: Prof. Jiwu Shu), and Bachelor's degree from Huazhong University of Science and Technology in 2018. From 2023 to 2025, I worked as a Postdoctoral Researcher at Tsinghua University.
       </p>
 
