--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>Qing Wang</h1>
       <p>Associate Professor</p>
       <p>School of Computer Science, Nanjing University.</p>
-      <p>Email: wq1997 at tsinghua dot edu dot cn</p>
+      <p>Email: wangqing.cs at nju dot edu dot cn</p>
       <p>
         <a href="https://scholar.google.com.hk/citations?user=H3vNc-EAAAAJ" target="_blank" title="Google Scholar" class="bule-tag">
           Google Scholar</a> |
