--- a/js_index.html
+++ b/js_index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header class="header-flex">
-    <img src="assets/wq.png" alt="Profile picture" class="avatar-rect">
+    <img src="assets/wq.jpg" alt="Profile picture" class="avatar-rect">
     <div class="info">
       <h1>Qing Wang</h1>
       <p>Associate Professor</p>
@@ -33,7 +33,8 @@
         I received my Ph.D. degree from Tsinghua University in 2023 (Advisor: Prof. Jiwu Shu), and Bachelor's degree from Huazhong University of Science and Technology in 2018. From 2023 to 2025, I worked as a Postdoctoral Researcher at Tsinghua University.
       </p>
 
-      <p><strong style="color:#1f77b4">Prospective students:</strong> If you're passionate about system research and interested in working with me, please feel free to reach out via email.</p>
+      <p><strong style="color:#1f77b4">Prospective students:</strong> 
+        We are seeking highly motivated PhD students, Master’s students, and interns. If you're passionate about system research and interested in working with me, please feel free to reach out via email.</p>
 
     </section>
 
