--- a/js_index.html
+++ b/js_index.html
@@ -30,11 +30,14 @@
     <section id="about">
       <h2>About Me</h2>
       <p>I am a tenure-track Associate Professor at Nanjing University.
-        I received my Ph.D. degree from Tsinghua University in 2023 (Advisor: Prof. Jiwu Shu), and Bachelor's degree from Huazhong University of Science and Technology in 2018. From 2023 to 2025, I worked as a Postdoctoral Researcher at Tsinghua University.
+        I received my Ph.D. degree from Tsinghua University in 2023 (Advisor: Prof. Jiwu Shu), and Bachelor's degree
+        from Huazhong University of Science and Technology in 2018. From 2023 to 2025, I worked as a Postdoctoral
+        Researcher at Tsinghua University.
       </p>
 
-      <p><strong style="color:#1f77b4">Prospective students:</strong> 
-        We are seeking highly motivated PhD students, Master’s students, and interns. If you're passionate about system research and interested in working with me, please feel free to reach out via email.</p>
+      <p><strong style="color:#1f77b4">Prospective students:</strong>
+        We are seeking highly motivated PhD students, Master’s students, and interns. If you're passionate about system
+        research and interested in working with me, please feel free to reach out via email.</p>
 
     </section>
 
@@ -43,50 +46,38 @@
 
       <p>My research focuses on computer systems, particularly <strong>storage/memory systems</strong> and
         <strong>networked systems</strong>.
+        <br> My ongoing research topics include:<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;1) Distributed systems for memory-semantic interconnects<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;2) System support for petabyte-scale memory<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;3) Data management for Agentic AI<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;4) Sustainable cloud storage
       </p>
-      <p> Below are several recent research projects:</p>
 
-      <ul>
+      <p style="margin-bottom: 0;"> Here are some of my representative research projects:
+      <ul style="margin-top: 0;">
         <li>
-          <strong>Lifting network-level knowledge to storage software</strong>
+          <strong>Network-Accelerated Distributed Systems</strong>
           <ul>
             <li>Leveraging NIC hardware ACKs for fast commit <span class="bule-tag">(NSDI'25)</span></li>
-          </ul>
-        </li>
-
-        <li>
-          <strong>Distributed protocols with network supports</strong>
-          <ul>
-            <li>In-network cache coherence <span class="bule-tag">(FAST'21)</span></li>
             <li>Network primitives for replication <span class="bule-tag">(OSDI'23)</span></li>
+            <li>Distributed locks <span class="bule-tag">(FAST'25, FAST'23)</span></li>
+            <li>Transactions <span class="bule-tag">(USENIX ATC'22, VLDB'22)</span></li>
+            <li>In-network cache coherence <span class="bule-tag">(FAST'21)</span></li>
           </ul>
         </li>
 
         <li>
-          <strong>Indexes for different network links</strong>
+          <strong>Emerging Memory Systems</strong>
           <ul>
-            <li>NUMA-aware index <span class="bule-tag">(OSDI'21)</span></li>
             <li>Index on disaggregated memory <span class="bule-tag">(EuroSys'25, SIGMOD'22)</span></li>
-          </ul>
-        </li>
-
-        <li>
-          <strong>Memory management</strong>
-          <ul>
+            <li>Persistent memory systems <span class="bule-tag">(OSDI'21, USENIX ATC'22/ATC'23)</span></li>
             <li>SSD-extended remote memory <span class="bule-tag">(FAST'24)</span></li>
             <li>Protective remote memory <span class="bule-tag">(FAST'23)</span></li>
-            <li>Memory compaction <span class="bule-tag">(USENIX ATC'22)</span></li>
-          </ul>
-        </li>
 
-        <li>
-          <strong>Concurrency</strong>
-          <ul>
-            <li>Distributed Locks <span class="bule-tag">(FAST'25, FAST'23)</span></li>
-            <li>Transactions <span class="bule-tag">(USENIX ATC'22, VLDB'22, DAC'20)</span></li>
           </ul>
         </li>
       </ul>
+      </p>
     </section>
 
 
