--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <p>My research focuses on computer systems, particularly <strong>storage/memory systems</strong> and
         <strong>networked systems</strong>.
         <br> My ongoing research topics include:<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;1) Distributed systems for memory-semantic interconnects<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;1) Distributed systems with memory-semantic interconnects<br>
         &nbsp;&nbsp;&nbsp;&nbsp;2) System support for petabyte-scale memory<br>
         &nbsp;&nbsp;&nbsp;&nbsp;3) Data management for Agentic AI<br>
         &nbsp;&nbsp;&nbsp;&nbsp;4) Sustainable cloud storage
