--- a/js_index.html
+++ b/js_index.html
@@ -44,13 +44,15 @@
     <section id="research">
       <h2>Research</h2>
 
-      <p>My research focuses on computer systems, particularly <strong>storage/memory systems</strong> and
+      <p style="margin-bottom: 0;">My research focuses on computer systems, particularly <strong>storage/memory systems</strong> and
         <strong>networked systems</strong>.
-        <br> My ongoing research topics include:<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;1) Distributed systems with memory-semantic interconnects<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;2) System support for petabyte-scale memory<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;3) Data management for Agentic AI<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;4) Sustainable cloud storage
+        <br> The research topics I am currently interested in include:
+         <ul style="margin-top: 0;">
+        <li> Distributed systems with memory-semantic interconnects</li>
+        <li> System support for petabyte-scale memory</li>
+        <li> Data management for Agentic AI</li>
+        <li> Sustainable cloud storage</li>
+        </ul>
       </p>
 
       <p style="margin-bottom: 0;"> Here are some of my representative research projects:
